--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,10 @@
         android:theme="@style/AppTheme" >
         
         <activity android:name="net.fhtagn.libsegdemo.MainActivity"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+                  android:screenOrientation="landscape"
+                  android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
